# NoteManager

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
include/: Collection.h  CollectionCounter.h  ImportantCollection.h  Note.h  NoteManager.h  Observer.h  Subject.h
src/: Collection.cpp  CollectionCounter.cpp  ImportantCollection.cpp  Note.cpp  NoteManager.cpp
test/: CMakeLists.txt  CollectionTest.cpp  IntegrationTest.cpp  NoteManagerTest.cpp  NoteTest.cpp  ObserverTest.cpp
